--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -280,12 +280,12 @@
        "      <th>0</th>\n",
        "      <td>5.006</td>\n",
        "      <td>0.352490</td>\n",
-       "      <td>3.418</td>\n",
-       "      <td>0.381024</td>\n",
-       "      <td>1.464</td>\n",
-       "      <td>0.173511</td>\n",
-       "      <td>0.244</td>\n",
-       "      <td>0.107210</td>\n",
+       "      <td>3.428</td>\n",
+       "      <td>0.379064</td>\n",
+       "      <td>1.462</td>\n",
+       "      <td>0.173664</td>\n",
+       "      <td>0.246</td>\n",
+       "      <td>0.105386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -317,19 +317,19 @@
        "       sepal length (cm)           sepal width (cm)            \\\n",
        "                    mean       std             mean       std   \n",
        "Target                                                          \n",
-       "0                  5.006  0.352490            3.418  0.381024   \n",
+       "0                  5.006  0.352490            3.428  0.379064   \n",
        "1                  5.936  0.516171            2.770  0.313798   \n",
        "2                  6.588  0.635880            2.974  0.322497   \n",
        "\n",
        "       petal length (cm)           petal width (cm)            \n",
        "                    mean       std             mean       std  \n",
        "Target                                                         \n",
-       "0                  1.464  0.173511            0.244  0.107210  \n",
+       "0                  1.462  0.173664            0.246  0.105386  \n",
        "1                  4.260  0.469911            1.326  0.197753  \n",
        "2                  5.552  0.551895            2.026  0.274650  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,18 +388,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1.0567655687463235e-247, 2.460149009916488e-12, 0.023861042537402642]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'p_x_given_class' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-026917d580bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTarget\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Initialize probability to relative probability of class\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mfeature\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0mp\u001b[0m \u001b[0;34m*=\u001b[0m \u001b[0mp_x_given_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Update the probability using the point estimate for each feature\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mc_probs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mc_probs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'p_x_given_class' is not defined"
+     ]
     }
    ],
    "source": [
@@ -562,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
